# lartc

./: .gitignore  Makefile  Packerfile  README.md  capi.c  compile.sh  compile_flags.txt  cycle.sh  hello.lart  hello_world.lart  meson.build  prova.sh  run.sh  test.sh  tree.lart  wrong.lart
include/lartc/: external_errors.hh  internal_errors.hh  serializations.hh  strings.hh  terminal.hh  tree_sitter.hh
include/lartc/api/: as.hh  config.hh  cpp.hh  ld.hh  llc.hh  lpp.hh  result.hh  utils.hh  workflow.hh
include/lartc/ast/: check.hh  declaration.hh  expression.hh  file_db.hh  operator.hh  parse.hh  statement.hh  symbol.hh  type.hh
include/lartc/ast/declaration/: merge.hh  parse.hh  variants.hh
include/lartc/ast/expression/: parse.hh  variants.hh
include/lartc/ast/statement/: parse.hh  variants.hh
include/lartc/ast/type/: parse.hh  variants.hh
include/lartc/codegen/: cg_context.hh  emit_llvm.hh  literal_store.hh  markers.hh
include/lartc/constants/: check_constants.hh  constant_cache.hh
include/lartc/resolve/: resolve_symbols.hh  symbol_cache.hh  symbol_stack.hh
include/lartc/typecheck/: casting.hh  check_declared_types.hh  check_types.hh  evaluation.hh  size_cache.hh  type_cache.hh
src/: main.cc
src/lartc/: external_errors.cc  internal_errors.cc  main.cc  serializations.cc  strings.cc
src/lartc/api/: as.cc  config.cc  cpp.cc  ld.cc  llc.cc  lpp.cc  utils.cc
src/lartc/ast/: check.cc  declaration.cc  expression.cc  file_db.cc  operator.cc  parse.cc  statement.cc  symbol.cc  type.cc
src/lartc/ast/declaration/: merge.cc  parse.cc  variants.cc
src/lartc/ast/expression/: parse.cc  variants.cc
src/lartc/ast/statement/: parse.cc  variants.cc
src/lartc/ast/type/: parse.cc  variants.cc
src/lartc/codegen/: emit_llvm.cc  literal_store.cc  markers.cc
src/lartc/constants/: check_constants.cc  constant_cache.cc
src/lartc/resolve/: resolve_symbols.cc  symbol_cache.cc  symbol_stack.cc
src/lartc/typecheck/: casting.cc  check_declared_types.cc  check_types.cc  size_cache.cc  type_cache.cc
subprojects/: tree-sitter-lart.wrap
